--- a/index.html
+++ b/index.html
@@ -1,50 +1,90 @@
 <!DOCTYPE html>
-<meta charset="utf-8">
+<html lang="zh">
+<head>
+  <meta charset="utf-8">
+  <title>棉花知识图谱展示</title>
+  <style>
+    body { margin: 0; overflow: hidden; background-color: #fafafa; }
+    svg { width: 100vw; height: 100vh; }
+    text { font-family: "Microsoft YaHei"; font-size: 12px; pointer-events: none; }
+  </style>
+</head>
 <body>
-<svg width="800" height="600"></svg>
-<script src="https://d3js.org/d3.v7.min.js"></script>
-<script>
-d3.json("graph.json").then(graph => {
-  const svg = d3.select("svg");
-  const width = +svg.attr("width"), height = +svg.attr("height");
-  const link = svg.selectAll("line")
-      .data(graph.links)
-      .join("line")
-      .attr("stroke", "#999");
-  const node = svg.selectAll("circle")
-      .data(graph.nodes)
-      .join("circle")
-      .attr("r", 6)
-      .attr("fill", "#69b3a2")
-      .call(drag(simulation));
-  const simulation = d3.forceSimulation(graph.nodes)
-      .force("link", d3.forceLink(graph.links).id(d => d.id))
-      .force("charge", d3.forceManyBody().strength(-300))
-      .force("center", d3.forceCenter(width / 2, height / 2))
-      .on("tick", () => {
-        link.attr("x1", d => d.source.x)
-            .attr("y1", d => d.source.y)
-            .attr("x2", d => d.target.x)
-            .attr("y2", d => d.target.y);
-        node.attr("cx", d => d.x).attr("cy", d => d.y);
+  <svg></svg>
+  <script src="https://cdn.staticfile.org/d3/7.8.5/d3.min.js"></script>
+  <script>
+    // 加载数据
+    d3.json("graph.json").then(function(graph) {
+      const svg = d3.select("svg");
+      const width = window.innerWidth;
+      const height = window.innerHeight;
+      const color = d3.scaleOrdinal(d3.schemeCategory10);
+
+      // ✅ 先定义 simulation
+      const simulation = d3.forceSimulation(graph.nodes)
+        .force("link", d3.forceLink(graph.links).id(d => d.id).distance(120))
+        .force("charge", d3.forceManyBody().strength(-250))
+        .force("center", d3.forceCenter(width / 2, height / 2));
+
+      // ✅ 再创建图元素
+      const link = svg.append("g")
+        .selectAll("line")
+        .data(graph.links)
+        .join("line")
+        .attr("stroke", "#aaa");
+
+      const node = svg.append("g")
+        .selectAll("circle")
+        .data(graph.nodes)
+        .join("circle")
+        .attr("r", 6)
+        .attr("fill", d => color(d.group))
+        .call(d3.drag()
+          .on("start", dragstarted)
+          .on("drag", dragged)
+          .on("end", dragended));
+
+      const label = svg.append("g")
+        .selectAll("text")
+        .data(graph.nodes)
+        .join("text")
+        .text(d => d.id)
+        .attr("x", 8)
+        .attr("y", 3);
+
+      simulation.on("tick", () => {
+        link
+          .attr("x1", d => d.source.x)
+          .attr("y1", d => d.source.y)
+          .attr("x2", d => d.target.x)
+          .attr("y2", d => d.target.y);
+        node
+          .attr("cx", d => d.x)
+          .attr("cy", d => d.y);
+        label
+          .attr("x", d => d.x + 8)
+          .attr("y", d => d.y + 3);
       });
-});
-function drag(simulation) {
-  function dragstarted(event) {
-    if (!event.active) simulation.alphaTarget(0.3).restart();
-    event.subject.fx = event.subject.x;
-    event.subject.fy = event.subject.y;
-  }
-  function dragged(event) {
-    event.subject.fx = event.x;
-    event.subject.fy = event.y;
-  }
-  function dragended(event) {
-    if (!event.active) simulation.alphaTarget(0);
-    event.subject.fx = null;
-    event.subject.fy = null;
-  }
-  return d3.drag().on("start", dragstarted).on("drag", dragged).on("end", dragended);
-}
-</script>
+
+      // 拖拽函数
+      function dragstarted(event) {
+        if (!event.active) simulation.alphaTarget(0.3).restart();
+        event.subject.fx = event.subject.x;
+        event.subject.fy = event.subject.y;
+      }
+      function dragged(event) {
+        event.subject.fx = event.x;
+        event.subject.fy = event.y;
+      }
+      function dragended(event) {
+        if (!event.active) simulation.alphaTarget(0);
+        event.subject.fx = null;
+        event.subject.fy = null;
+      }
+    }).catch(err => {
+      console.error("❌ 加载 graph.json 失败：", err);
+      alert("加载数据失败，请检查 graph.json 是否在根目录。");
+    });
+  </script>
 </body>
+</html>
