--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
     <div id="mynetwork"></div>
     <div class="controls">
         <button onclick="fitToScreen()">适应屏幕</button>
-        <button onclick="togglePhysics()" id="physicsToggleBtn">关闭物理引擎</button> <!-- 更新按钮ID和初始文本 -->
+        <!-- 由于物理引擎已禁用，可以移除或禁用切换物理引擎的按钮 -->
+        <!-- <button onclick="togglePhysics()" id="physicsToggleBtn">关闭物理引擎</button> -->
     </div>
 
     <script src="script.js"></script>
