--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>知识图谱可视化</title>
-    <!-- 引入 vis-network CSS 和 JS -->
     <link rel="stylesheet" href="https://unpkg.com/vis-network/styles/vis-network.min.css">
     <script src="https://unpkg.com/vis-network/standalone/umd/vis-network.min.js"></script>
     <style>
@@ -14,8 +13,8 @@
             font-family: sans-serif;
         }
         #mynetwork {
-            width: 100vw; /* 视口宽度 */
-            height: 90vh; /* 视口高度的90% */
+            width: 100vw;
+            height: 80vh; /* 留出控件空间 */
             border: 1px solid #d3d3d3;
         }
         .controls {
@@ -28,18 +27,42 @@
             border-radius: 5px;
             box-shadow: 0 0 10px rgba(0,0,0,0.1);
         }
+        .control-group {
+            margin-bottom: 10px;
+        }
         button {
-            margin: 5px;
+            margin: 2px 5px;
             padding: 5px 10px;
+            font-size: 12px;
         }
     </style>
 </head>
 <body>
     <div id="mynetwork"></div>
     <div class="controls">
-        <button onclick="fitToScreen()">适应屏幕</button>
-        <!-- 由于物理引擎已禁用，可以移除或禁用切换物理引擎的按钮 -->
-        <!-- <button onclick="togglePhysics()" id="physicsToggleBtn">关闭物理引擎</button> -->
+        <div class="control-group">
+            <h4>按比例展示</h4>
+            <button onclick="showPercentage(10)">10%</button>
+            <button onclick="showPercentage(30)">30%</button>
+            <button onclick="showPercentage(60)">60%</button>
+            <button onclick="showPercentage(100)">100%</button>
+        </div>
+        <div class="control-group">
+            <h4>按类型展示</h4>
+            <button onclick="showByLabel('人才')">人才</button>
+            <button onclick="showByLabel('高校')">高校</button>
+            <button onclick="showByLabel('工作单位')">工作单位</button>
+            <button onclick="showByLabel('城市')">城市</button>
+            <button onclick="showByLabel('技能')">技能</button>
+            <button onclick="showByLabel('算力项目')">算力项目</button>
+            <button onclick="showByLabel('专业领域')">专业领域</button>
+            <button onclick="showByLabel('算力工作年限')">算力工作年限</button>
+            <button onclick="showByLabel('算力类型')">算力类型</button>
+            <button onclick="showByLabel('合作对象')">合作对象</button>
+        </div>
+        <div class="control-group">
+            <button onclick="fitToScreen()">适应屏幕</button>
+        </div>
     </div>
 
     <script src="script.js"></script>
