--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         }
         #mynetwork {
             width: 100vw;
-            height: 80vh; /* 留出控件空间 */
+            height: 85vh; /* 留出控件空间 */
             border: 1px solid #d3d3d3;
         }
         .controls {
@@ -26,14 +26,34 @@
             padding: 10px;
             border-radius: 5px;
             box-shadow: 0 0 10px rgba(0,0,0,0.1);
+            max-width: 300px; /* 限制最大宽度 */
         }
         .control-group {
             margin-bottom: 10px;
         }
+        h4 {
+            margin: 5px 0; /* 减小标题上下边距 */
+            font-size: 14px; /* 减小标题字体 */
+        }
+        .button-row {
+            display: flex;
+            flex-wrap: wrap; /* 按钮过多时自动换行 */
+            gap: 3px; /* 按钮间隙 */
+        }
         button {
-            margin: 2px 5px;
-            padding: 5px 10px;
-            font-size: 12px;
+            margin: 1px; /* 减小按钮外边距 */
+            padding: 3px 6px; /* 减小按钮内边距 */
+            font-size: 11px; /* 减小按钮字体 */
+            flex: 1 1 auto; /* 按钮尽可能平均分配空间 */
+            min-width: 50px; /* 设置最小宽度 */
+        }
+        .zoom-controls {
+            display: inline-flex; /* 让按钮并排 */
+            align-items: center; /* 垂直居中 */
+        }
+        .zoom-controls button {
+            margin: 0 2px; /* 调整缩放按钮的边距 */
+            min-width: 30px; /* 设置缩放按钮的最小宽度 */
         }
     </style>
 </head>
@@ -42,25 +62,33 @@
     <div class="controls">
         <div class="control-group">
             <h4>按比例展示</h4>
-            <button onclick="showPercentage(10)">10%</button>
-            <button onclick="showPercentage(30)">30%</button>
-            <button onclick="showPercentage(60)">60%</button>
-            <button onclick="showPercentage(100)">100%</button>
+            <div class="button-row">
+                <button onclick="showPercentage(30)">30%</button>
+                <button onclick="showPercentage(50)">50%</button>
+                <button onclick="showPercentage(70)">70%</button>
+                <button onclick="showPercentage(100)">100%</button>
+            </div>
         </div>
         <div class="control-group">
             <h4>按类型展示</h4>
-            <button onclick="showByLabel('人才')">人才</button>
-            <button onclick="showByLabel('高校')">高校</button>
-            <button onclick="showByLabel('工作单位')">工作单位</button>
-            <button onclick="showByLabel('城市')">城市</button>
-            <button onclick="showByLabel('技能')">技能</button>
-            <button onclick="showByLabel('算力项目')">算力项目</button>
-            <button onclick="showByLabel('专业领域')">专业领域</button>
-            <button onclick="showByLabel('算力工作年限')">算力工作年限</button>
-            <button onclick="showByLabel('算力类型')">算力类型</button>
-            <button onclick="showByLabel('合作对象')">合作对象</button>
+            <div class="button-row">
+                <button onclick="showByLabel('人才')">人才</button>
+                <button onclick="showByLabel('高校')">高校</button>
+                <button onclick="showByLabel('单位')">单位</button> <!-- 使用 range 中的 "单位" -->
+                <button onclick="showByLabel('城市')">城市</button>
+                <button onclick="showByLabel('技能')">技能</button>
+                <button onclick="showByLabel('项目')">项目</button> <!-- 使用 range 中的 "项目" -->
+                <button onclick="showByLabel('专业领域')">专业领域</button>
+                <button onclick="showByLabel('算力工作年限')">年限</button>
+                <button onclick="showByLabel('算力类型')">算力类型</button>
+                <button onclick="showByLabel('合作对象')">合作对象</button>
+            </div>
         </div>
         <div class="control-group">
+            <div class="zoom-controls">
+                <button onclick="zoomIn()">+</button>
+                <button onclick="zoomOut()">-</button>
+            </div>
             <button onclick="fitToScreen()">适应屏幕</button>
         </div>
     </div>
