--- a/index.html
+++ b/index.html
@@ -86,8 +86,7 @@
         </div>
         <div class="control-group">
             <div class="zoom-controls">
-                <button onclick="zoomIn()">+</button>
-                <button onclick="zoomOut()">-</button>
+                <button onclick="toggleControls()">H</button> <!-- "H" 代表 Hide/Show -->
             </div>
             <button onclick="fitToScreen()">适应屏幕</button>
         </div>
