--- a/index.html
+++ b/index.html
@@ -82,16 +82,12 @@
         <div class="control-group">
             <h4>按类型展示</h4>
             <div class="button-row">
-                <button onclick="showByLabel('人才')">人才</button>
-                <button onclick="showByLabel('高校')">高校</button>
-                <button onclick="showByLabel('工作单位')">工作单位</button> <!-- 使用 displayLabel -->
-                <button onclick="showByLabel('城市')">城市</button>
-                <button onclick="showByLabel('技能')">技能</button>
-                <button onclick="showByLabel('算力项目')">算力项目</button> <!-- 使用 displayLabel -->
-                <button onclick="showByLabel('专业领域')">专业领域</button>
-                <button onclick="showByLabel('算力工作年限')">年限</button>
-                <button onclick="showByLabel('算力类型')">算力类型</button>
-                <button onclick="showByLabel('合作对象')">合作对象</button>
+                <button onclick="showByLabel('姓名')">姓名</button>
+                <button onclick="showByLabel('年龄')">年龄</button>
+                <button onclick="showByLabel('性别')">性别</button>
+                <button onclick="showByLabel('单位')">单位</button>
+                <button onclick="showByLabel('地区')">地区</button>
+                <button onclick="showByLabel('研究领域')">研究领域</button>
             </div>
         </div>
         <div class="control-group">
