--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
             <h4>按类型展示</h4>
             <div class="button-row">
                 <button onclick="showByLabel('姓名')">姓名</button>
-                <button onclick="showByLabel('年龄')">年龄</button>
-                <button onclick="showByLabel('性别')">性别</button>
+                <!-- <button onclick="showByLabel('年龄')">年龄</button> 移除 -->
+                <!-- <button onclick="showByLabel('性别')">性别</button> 移除 -->
                 <button onclick="showByLabel('单位')">单位</button>
                 <button onclick="showByLabel('地区')">地区</button>
                 <button onclick="showByLabel('研究领域')">研究领域</button>
